--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Setup
 title: Midnight Coder's Lounge
-description: StackOverFlow 명문과 해외칼럼을 소개합니다.
-url: 'https://https//atomicliquors.github.io'
-avatar: /avatar.jpeg
+description: 테스트가 진행중입니다.
+url: 'https://atomicliquors.github.io'
+avatar: /avatar.webp
 paginate: 5
 permalink: pretty
-cover_image: /bg.jpeg
+cover_image: /lounge.jpg
 
 # Gems
 plugins:
@@ -49,7 +49,7 @@ sass:
 # google_analytics: UA-000000-0
 
 # Replace this value and uncomment to enable Disqus
-# disqus: xxxxxx
+disqus: xxxxxx
 
 # Specify the author for blog posts
 author:
